--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,3 +16,5 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker Compose File
       run: docker compose build
+    - name: run tests
+      uses: liatrio/github-actions/apprentice-action@master
