--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,7 +17,7 @@ jobs:
     - uses: actions/checkout@v3
     
     # This needs to be built for the Unit test
-    - name: Build the Docker compose file
+    - name: Build the Docker Compose file
       run: docker compose build
       
     # This needs to be built to deploy to the cloud
@@ -25,30 +25,30 @@ jobs:
       run: docker build -t "liatriowebapp" .
       
     # Runs container for Unit Test
-    - name: Run Docker Container
+    - name: Run Docker Compose
       run: docker compose up -d
       
     # Runs Unit Test provided by liatrio
     - name: run tests
       uses: liatrio/github-actions/apprentice-action@master
       
-    # Authentication for Dockerhub to publish image
-    - name: Login to DockerHub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+#     # Authentication for Dockerhub to publish image
+#     - name: Login to DockerHub
+#       uses: docker/login-action@v1
+#       with:
+#         username: ${{ secrets.DOCKER_USERNAME }}
+#         password: ${{ secrets.DOCKER_PASSWORD }}
         
-    # Buildx action used to setup a push action to the dockerhub
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+#     # Buildx action used to setup a push action to the dockerhub
+#     - name: Set up Docker Buildx
+#       uses: docker/setup-buildx-action@v2
       
-    # Build image and push to dockerhub
-    - name: Build and push image
-      uses: docker/build-push-action@v2
-      with:
-        push: true
-        tags: densell321/liatriowebapp:latest-${{ github.run_number }}
+#     # Build image and push to dockerhub
+#     - name: Build and push image
+#       uses: docker/build-push-action@v2
+#       with:
+#         push: true
+#         tags: densell321/liatriowebapp:latest-${{ github.run_number }}
         
     # Authenticate Google Cloud Platform to deploy image
     - id: 'auth'
@@ -61,7 +61,7 @@ jobs:
       uses: google-github-actions/setup-gcloud@v0.2.1
       
     # Building and pushing image to registry on google cloud run
-    - name: Build and Push
+    - name: Build and Push to GCR
       run: |-
           gcloud builds submit \
             --quiet \
