--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -65,7 +65,7 @@ jobs:
       run: |-
           gcloud builds submit \
             --quiet \
-            --tag "gcr.io/erudite-buckeye-347923/liatriowebapp"
+            --tag "gcr.io/erudite-buckeye-347923/liatriowebapp:latest-${{ github.run_number }}"
       
     # Deploying GCP image from registry from previous job
     - name: Deploy GCR
@@ -73,7 +73,7 @@ jobs:
           gcloud run deploy "liatriowebapp" \
             --quiet \
             --region "us-central1" \
-            --image "gcr.io/erudite-buckeye-347923/liatriowebapp" \
+            --image "gcr.io/erudite-buckeye-347923/liatriowebapp:latest-${{ github.run_number }}" \
             --platform "managed" \
             --allow-unauthenticated
     
