--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -58,7 +58,7 @@ jobs:
 
     # Setting up GCP SDK to run gcloud commands
     - name: Set up Cloud SDK
-      uses: google-github-actions/setup-gcloud@v0'
+      uses: google-github-actions/setup-gcloud@v0
       
     # Building and pushing image to registry on google cloud run
     - name: Build and Push to GCR
